have the menu partial listening to the menu ctrl which only gives it the spotify login button

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <i class="material-icons md-36">queue_music</i>
                 Mixtape
             </a>
-            <div ng-include="'assets/partials/menu.html'"></div>
+            <div ng-include="'assets/partials/menu.html'" ng-controller="MenuCtrl"></div>
         </class>
     </nav>
     <main>
