login auto populates user info, saved sample user info, moved login business to user ctrl

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body ng-app="mixtape">
-    <nav class="green darken-2">
+    <nav class="grey darken-3">
         <class="nav-wrapper">
-            <a href="/" class="brand-logo green darken-1">
+            <a href="/" class="brand-logo darken-3">
                 <i class="material-icons md-36">queue_music</i>
                 Mixify
             </a>
@@ -32,40 +32,13 @@
             </div>
         </div>
     </main>
-    <footer class="page-footer green darken-2">
-        <div class="container">
-            <div class="row">
-                <div class="col l6 s12">
-                    <h5 class="white-text">Footer Content</h5>
-                    <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
-                </div>
-                <div class="col l4 offset-l2 s12">
-                    <h5 class="white-text">Links</h5>
-                    <ul>
-                        <li>
-                            <a class="grey-text text-lighten-3" href="#!">Link 1</a>
-                        </li>
-                        <li>
-                            <a class="grey-text text-lighten-3" href="#!">Link 2</a>
-                        </li>
-                        <li>
-                            <a class="grey-text text-lighten-3" href="#!">Link 3</a>
-                        </li>
-                        <li>
-                            <a class="grey-text text-lighten-3" href="#!">Link 4</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-        <div class="footer-copyright green darken-3">
+    <footer class="page-footer grey darken-3">
+        <div class="footer-copyright grey darken-3">
             <div class="container">
-                © 2014 Copyright Text
-                <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+                &copy; 2018 Copyright Text
             </div>
         </div>
         </footer>
     <script src="dist/bundle.js"></script>
-
 </body>
 </html>
