5 book results populate

--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
             </div>
         </div>
         </footer>
+    <!-- jQuery for Materialize -->
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <!-- Materialize JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
     <script src="dist/bundle.js"></script>
 </body>
 </html>
