everything's commented out and nothing works

--- a/index.html
+++ b/index.html
@@ -13,24 +13,24 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body ng-app="mixtape">
-    <nav class="grey darken-3">
+    <!-- <nav class="grey darken-3">
         <class="nav-wrapper">
             <a href="/" class="brand-logo darken-3">
                 Mixify
             </a>
             <div ng-include="'assets/partials/menu.html'" ng-controller="MenuCtrl"></div>
         </class>
-    </nav>
+    </nav> -->
     <main>
-        <div ng-view></div>
+        <div ui-view></div>
     </main>
-    <footer class="page-footer grey darken-3">
+    <!-- <footer class="page-footer grey darken-3">
         <div class="footer-copyright grey darken-3">
             <div class="container">
                 &copy; 2018 Copyright Text
             </div>
         </div>
-        </footer>
+        </footer> -->
     <!-- jQuery for Materialize -->
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <!-- Materialize JS -->
