used cdns for ui router and angular, way in over my head

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </class>
     </nav> -->
     <main>
-        <div ui-view></div>
+        <ui-view></ui-view>
     </main>
     <!-- <footer class="page-footer grey darken-3">
         <div class="footer-copyright grey darken-3">
@@ -35,6 +35,8 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <!-- Materialize JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.5/angular.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/1.0.3/angular-ui-router.min.js"></script>
     <script src="dist/bundle.js"></script>
 </body>
 </html>
