updated copyright info

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <footer class="page-footer grey darken-3">
         <div class="footer-copyright grey darken-3">
             <div class="container">
-                &copy; 2018 Copyright Text
+                &copy; 2018 <a target="blank" href="http://kenzie.ink">Kenzie Bottoms</a> | <a target="blank" href="https://github.com/kenziebottoms/nss-front-capstone-mixify">Source on Github</a>
             </div>
         </div>
         </footer>
