fixed redirect and brand link urls

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body ng-app="mixtape">
     <nav class="grey darken-3">
         <class="nav-wrapper">
-            <a href="/" class="brand-logo darken-3">
+            <a href="/nss-front-capstone-mixify/#!/" class="brand-logo darken-3">
                 Mixify
             </a>
             <div ng-include="'assets/partials/menu.html'" ng-controller="MenuCtrl"></div>
